[tool.poetry]
name = "fastapi-proj"
version = "0.1.0"
description = ""
authors = ["belo4ya <41exey.kov41ev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
alembic = "^1.8.1"
sqlmodel = "^0.0.8"
asyncpg = "^0.26.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
black = "^22.8.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
bandit = "^1.7.4"
pylint = "^2.15.3"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
