[tool.poetry]
name = "fastapi-proj"
version = "0.1.0"
description = ""
authors = ["belo4ya <41exey.kov41ev@gmail.com>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
alembic = "^1.8.1"
sqlmodel = "^0.0.8"
asyncpg = "^0.26.0"
loguru = "^0.6.0"
pydantic = { extras = ["dotenv"], version = "^1.10.2" }
typer = "^0.6.1"

[tool.poetry.dev-dependencies]
aiosqlite = "^0.17.0"
pytest = "^7.1.3"
flake8 = "^4.0.1"
wemake-python-styleguide = "^0.16.1"
pylint = "^2.15.3"
black = "^22.8.0"
isort = "^5.10.1"
bandit = "^1.7.4"
mypy = "^0.971"

[tool.poetry.scripts]
migrate = "app.cli:migrate"
upgrade = "app.cli:upgrade"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]

[tool.black]

[tool.pylint]

[tool.bandit]

[tool.isort]
